[gd_scene load_steps=6 format=2]

[ext_resource path="res://LooneyLips.gd" type="Script" id=1]
[ext_resource path="res://gfx/blackboard.jpg" type="Texture" id=2]
[ext_resource path="res://gfx/Feltpen.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 3 )

[node name="LooneyLips" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.244934
margin_right = 0.244873
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 24.0
margin_top = 17.8811
margin_right = -24.0
margin_bottom = -13.1189
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Story" type="Label" parent="VBoxContainer"]
margin_top = 192.0
margin_right = 976.0
margin_bottom = 492.0
rect_min_size = Vector2( 0, 300 )
size_flags_vertical = 0
custom_fonts/font = SubResource( 1 )
text = "Placeholder text
"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 496.0
margin_right = 976.0
margin_bottom = 569.0
alignment = 2

[node name="PlayerText" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
margin_right = 899.0
margin_bottom = 73.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 903.0
margin_right = 976.0
margin_bottom = 73.0
rect_min_size = Vector2( 73, 73 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="text_entered" from="VBoxContainer/HBoxContainer/PlayerText" to="." method="_on_PlayerText_text_entered"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button" to="." method="_on_Button_pressed"]
